@@ -11,7 +11,7 @@
 This is Linux-GPIB the IEEE-488 card support
 package and measurement suite for LINUX.
 
-This version of Linux-GPIB requires a version 2.6.x or 3.x.x  
+This version of Linux-GPIB requires a version 2.6.x or above 
 of the Linux kernel.
 
 2.6.x kernels older than 2.6.8 are not supported.  
